deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-web-client
  labels:
    app.kubernetes.io/name: mqttx
    app.kubernetes.io/instance: web-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mqttx
      app.kubernetes.io/instance: web-client
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mqttx
        app.kubernetes.io/instance: web-client
    spec:
      containers:
        - name: mqttx
          image: "emqx/mqttx-web:v1.9.3"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
