deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqtt-web-client
  labels:
    app.kubernetes.io/name: mqttx
    app.kubernetes.io/instance: web-client
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: mqttx
    app.kubernetes.io/instance: web-client
