deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mqtt-web-client
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: "nginx"
  rules:
    - http:
        paths:
          - path: /explore
            pathType: Prefix
            backend:
              service:
                name: mqtt-web-client
                port:
                  name: http
